# RECS

./: CMakeLists.txt  main.cpp
include/: entity.hpp  pool.hpp  recs_types.hpp  registry.hpp  registry_meta.hpp  utils.hpp  view.hpp
include/recs/: registry.hpp
src/: entity.cpp  pool.cpp  registry.cpp  registry_meta.cpp
tests/: CMakeLists.txt  main.cpp  test.cpp
